# solmail-indexer

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  schema.sql  substreams.yaml
graphqlApi/: .env  ecosystem.config.cjs  package-lock.json  package.json  server.js
graphqlApi/core/: apolloConfig.js  auth.js  cache.js  database.js  envValidation.js  errorHandler.js  index.js  logger.js  rateLimiter.js
graphqlApi/helpers/: analyticsHelpers.js  index.js  mailHelpers.js
graphqlApi/modals/: accountEvents.js  index.js  instructions.js  mailEvents.js  userModels.js
graphqlApi/resolvers/: accountEvents.js  analytics.js  base.js  index.js  instructions.js  mailEvents.js  users.js  utilities.js
graphqlApi/scripts/: createIndexes.js
graphqlApi/test/: testUtils.js
graphqlApi/typedefs/: accountEvents.js  analytics.js  base.js  index.js  instructions.js  mailEvents.js  users.js  utilities.js
idls/: program.json
proto/: program.proto
src/: lib.rs  types.rs
src/deserializers/: events.rs  helpers.rs  instructions.rs  mod.rs
src/handlers/: db_out.rs  map_program_data.rs  mod.rs
src/idl/: mod.rs
src/pb/: mod.rs  substreams.v1.program.rs
