[package]
name = "solmail_indexer"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-solana = "0.14"
substreams-solana-program-instructions = "0.2"
substreams-database-change = "2"  # Updated from "1.3"
anchor-lang = ">=0.31.0"
sologger_log_context = "0.1.2"
base64 = "0.22.1"
chrono = "0.4"
sha2 = "0.10.9"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
